Fixed cut off text in the link switcher (checked this time) (#3)
* Change display type for blocks

* added container

* added container

* added container

* added container

* Update css file for box change

* added flex settings

* added flex settings

--- a/resources/stylesheet/Pages.scss
+++ b/resources/stylesheet/Pages.scss
@@ -90,12 +90,14 @@ h1 {
   color: black;
   text-align: center;
   background-color: white;
-  display: block;
+  display: flex;
   cursor: pointer;
   width: 125px;
-  height: 50px;
+  height: 60px;
   padding: 0 5px;
   padding-top: 10px;
   grid-row: 2;
   border-radius: 2px;
+  flex-direction: column;
+  justify-content: center;
 }
